need to bind array to function

--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
 
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=0">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>Hello Drag&Drop 2</title>
+	
+	<style>
+		img {
+			max-width: 200px !important;
+		}
+	</style>
+	
+  </head>
+  <body>
+  
+	<div class="container mt-5 mb-5">
+		
+		<h1 class="display-4 text-center mb-5">Hello Drag&amp;Drop 2</h1>
+		
+
+		<div class="d-flex align-items-center justify-content-center flex-wrap">
+			
+			<img src="images/1.jpg" class="img-thumbnail d-block m-2">
+			<img src="images/2.jpg" class="img-thumbnail d-block m-2">
+			<img src="images/3.jpg" class="img-thumbnail d-block m-2">
+			<img src="images/4.jpg" class="img-thumbnail d-block m-2">
+			<img src="images/5.jpg" class="img-thumbnail d-block m-2">
+			
+		</div>
+		
+		</div>
+			
+		<script defer src="code.js"></script>
+		
+
+
+  </body>
+</html>
