--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 	<style>
 		img {
 			max-width: 200px !important;
+			transform: scale(1);
+		}
+		.image{
+			position: sticky;			
+		}
+		.image1{
+			position: absolute;
 		}
 	</style>
 	
